fix: y-axis overflow in embed dialog

--- a/Frontend/src/app/features/dialogs/dialog-modules/node-embed-dialog/node-embed-dialog.component.scss
+++ b/Frontend/src/app/features/dialogs/dialog-modules/node-embed-dialog/node-embed-dialog.component.scss
@@ -14,8 +14,9 @@
 
 .preview-container {
     flex-grow: 1;
-    display: flex;
-    align-items: center;
+    // Center using grid and `margin: auto` to avoid cropped content on overflow. See
+    // https://bhch.github.io/posts/2021/04/centring-flex-items-and-allowing-overflow-scroll/.
+    display: grid;
     overflow: auto;
     box-shadow: inset 0px 1px 10px rgba(0, 0, 0, 0.48);
     // From https://freebiesupply.com/blog/css-background-patterns/
@@ -43,10 +44,7 @@
 }
 
 .preview {
-    // We can't use justify-content on the container. See
-    // https://bhch.github.io/posts/2021/04/centring-flex-items-and-allowing-overflow-scroll/.
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     line-height: 0;
     background: white;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.48);
